[workspace]
members = [ 
    "debug",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://matter-labs.io/"
license = "MIT"

[workspace.dependencies]
# Crates from this repo.
zksync_debug = { path = "debug" }

# era-consensus
zksync_consensus_bft = { version = "0.1.0", git = "https://github.com/matter-labs/era-consensus.git", rev = "d17c018b94f8d186e7fe701e947af8ef1953fa3b" }
zksync_consensus_crypto = { version = "0.1.0", git = "https://github.com/matter-labs/era-consensus.git", rev = "d17c018b94f8d186e7fe701e947af8ef1953fa3b" }
zksync_consensus_executor = { version = "0.1.0", git = "https://github.com/matter-labs/era-consensus.git", rev = "d17c018b94f8d186e7fe701e947af8ef1953fa3b" }
zksync_consensus_network = { version = "0.1.0", git = "https://github.com/matter-labs/era-consensus.git", rev = "d17c018b94f8d186e7fe701e947af8ef1953fa3b" }
zksync_consensus_roles = { version = "0.1.0", git = "https://github.com/matter-labs/era-consensus.git", rev = "d17c018b94f8d186e7fe701e947af8ef1953fa3b" }
zksync_consensus_storage = { version = "0.1.0", git = "https://github.com/matter-labs/era-consensus.git", rev = "d17c018b94f8d186e7fe701e947af8ef1953fa3b" }
zksync_consensus_sync_blocks = { version = "0.1.0", git = "https://github.com/matter-labs/era-consensus.git", rev = "d17c018b94f8d186e7fe701e947af8ef1953fa3b" }
zksync_consensus_tools = { version = "0.1.0", git = "https://github.com/matter-labs/era-consensus.git", rev = "d17c018b94f8d186e7fe701e947af8ef1953fa3b" }
zksync_consensus_utils = { version = "0.1.0", git = "https://github.com/matter-labs/era-consensus.git", rev = "d17c018b94f8d186e7fe701e947af8ef1953fa3b" }

zksync_concurrency = { version = "0.1.0", git = "https://github.com/matter-labs/era-consensus.git", rev = "d17c018b94f8d186e7fe701e947af8ef1953fa3b" }
zksync_protobuf = { version = "0.1.0", git = "https://github.com/matter-labs/era-consensus.git", rev = "d17c018b94f8d186e7fe701e947af8ef1953fa3b" }
zksync_protobuf_build = { version = "0.1.0", git = "https://github.com/matter-labs/era-consensus.git", rev = "d17c018b94f8d186e7fe701e947af8ef1953fa3b" }

# zksync-era
multivm = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }
prometheus_exporter = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }
prover_dal = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }
vlog = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }
vm_utils = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }
vm-benchmark-harness = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }
zksync = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }
zksync_basic_types = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }
zksync_circuit_breaker = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }
zksync_commitment_utils = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }
zksync_config = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }
zksync_contracts = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }
zksync_core = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }
zksync_crypto = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }
zksync_dal = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }
zksync_db_connection = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }
zksync_env_config = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }
zksync_eth_client = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }
zksync_eth_signer = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }
zksync_health_check = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }
zksync_l1_contract_interface = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }
zksync_mempool = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }
zksync_merkle_tree = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }
zksync_mini_merkle_tree = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }
zksync_object_store = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }
zksync_protobuf_config = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }
zksync_prover_interface = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }
zksync_queued_job_processor = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }
zksync_snapshots_applier = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }
zksync_state = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }
zksync_storage = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }
zksync_system_constants = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }
zksync_test_account = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }
zksync_types = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }
zksync_utils = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }
zksync_web3_decl = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }
zksync_crypto_primitives = { version = "0.1.0", git = "https://github.com/matter-labs/zksync-era.git", branch = "main" }

# Crates from third-parties.
sqlx = "=0.7.3"
anyhow = "1"
assert_matches = "1.5.0"
async-trait = "0.1.71"
bit-vec = "0.6"
blst = "0.3.11"
clap = { version = "4.3.3", features = ["derive"] }
criterion = "0.5.1"
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
ff_ce = "0.14.3"
heck = "0.5.0"
hex = "0.4.3"
im = "15.1.0"
once_cell = "1.17.1"
pin-project = "1.1.0"
pretty_assertions = "1.4.0"
prettyplease = "0.2.6"
proc-macro2 = "1.0.66"
prost = "0.12.0"
prost-build = "0.12.0"
prost-reflect = { version = "0.12.0", features = ["serde"] }
protox = "0.5.0"
quick-protobuf = "0.8.1"
quote = "1.0.33"
rand = "0.8.0"
rand04 = { package = "rand", version = "0.4" }
rocksdb = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"
serde_yaml = "0.9"
sha3 = "0.10.8"
snow = "0.9.3"
syn = "2.0.17"
tempfile = "3"
test-casing = "0.1.0"
thiserror = "1.0.40"
time = "0.3.23"
tokio = { version = "1.34.0", features = ["full"] }
tracing = { version = "0.1.37", features = ["attributes"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt"] }
kube = { version = "0.88.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21.0", features = ["latest"] }
jsonrpsee = { version = "0.21.0", features = ["server", "http-client"]  }
tower = { version = "0.4.13" }

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'

[profile.dev.package."*"]
opt-level = 3
