[package]
name = "zksync_consensus_debug"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
default-run = "debug"

[dependencies]
zksync_concurrency.workspace = true
zksync_consensus_bft.workspace = true
zksync_consensus_crypto.workspace = true
zksync_consensus_executor.workspace = true
zksync_consensus_roles.workspace = true
zksync_consensus_storage.workspace = true
zksync_consensus_utils.workspace = true
zksync_protobuf.workspace = true

zksync_dal.workspace = true
zksync_core.workspace = true

sqlx.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[[bin]]
name = "debug"
path = "src/main.rs"
