[package]
name = "zksync_consensus_json_client"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
default-run = "main"

[dependencies]
zksync_dal.workspace = true
zksync_core.workspace = true

sqlx.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[[bin]]
name = "main"
path = "src/main.rs"
